# monerod-startos

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  docker_entrypoint.sh  manifest.yaml  monero.conf  package-lock.json  package.json  prepare.sh
.github/workflows/: releaseService.yml
Testing/: Dockerfile  docker_entrypoint.sh
Testing/manager/: Cargo.toml
assets/: .backupignore  monero-wallet-rpc.conf.template  monero.conf.template
assets/compat/: config_spec.yaml  monerod.conf.template
docs/: instructions.md  monero.conf  monero.service
docs/guides.md/: anonero.md  cake.md  feather.md  haveno-reto.md  monero-gui.md  monerujo.md
manager/: Cargo.toml
manager/src/: main.rs
old/: docker_entrypoint.sh
old/scripts/services/: getConfig.ts  properties.ts  setConfig.ts
scripts/: bundle.ts  check-rpc.sh  check-sync.sh  creds-rpc.sh  dependencies.ts  deps.ts  embassy.ts
scripts/services/: backups.ts  dependencies.ts  getConfig.ts  migrations.ts  properties.ts  setConfig.ts
scripts/services/migrations/: down-from-0_18_4_0.ts  down-from-0_18_4_2.ts  down-to-0_18_2_2.ts  up-to-0_18_3_1.ts  up-to-0_18_3_2.ts  up-to-0_18_3_3.ts  up-to-0_18_3_4.ts  up-to-0_18_4_0.ts  up-to-0_18_4_2.ts
startos/: backups.ts  interfaces.ts  main.ts  manifest.ts  utils.ts
startos/actions/: helloScript.ts  setName.ts  showSecretPhrase.ts
startos/fileModels/: config.yml.ts  monero.conf.ts
startos/init/: index.ts  taskShowSecretPhrase.ts
startos/install/: versionGraph.ts
startos/install/versions/: index.ts  v0.18.4.2.0.ts
