
[package]
name = "monerod-manager"
version = "0.1.0"
authors = ["kn0wmad <kn0wmad@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
ctrlc = { version = "3.1.7", features = ["termination"] }
heck = "0.4.0"
lazy_static = "1.4.0"
linear-map = { version = "*", features = ["serde_impl"] }
nix = "0.24.1"
regex = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.15"
serde_json = "1.0"
tiny-tmpl = "0.1.3"